--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_HOST=localhost
 DATABASE_PORT=25432
+OPENAI_API_KEY=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
