--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
+    "axios": "^0.26.1",
+    "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
+    "openai": "^2.0.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
